subscriptions: Fix alignment of search input in creation form.
The search input for new subscribers and members list was
not aligned correctly with the heading. This commit fixes it.

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -1121,6 +1121,7 @@ h4.user_group_setting_subsection_title {
         .add-user-list-filter {
             width: 140px;
             float: right;
+            margin-top: 10px;
         }
 
         #user_group_creation_form,
